fix app height on ios devices

--- a/styles/_theme.scss
+++ b/styles/_theme.scss
@@ -62,6 +62,7 @@ svg {
   right: 0;
   bottom: 0;
   height: 100vh;
+  min-height: -webkit-fill-available;
   display: flex;
   justify-content: center;
   align-items: center;
